# agent-playground

./: .env.example  .gitignore  01.langchainv1-chat-tool.py  02.langchainv1-middleware.py  03.deep-agent-file-summarizer-mono.py  04.deep-agent-file-summarizer.py  05.langchainv1-planner-chat-mcp.py  06.multi-agent-knowledge-router.py  07.customer-support-state-machine.py  08.pizza-order-state-machine.py  09.chat-human-loop.py  10.recipe-generator-hitl.py  11.langchainv1-chat-mcp.py  12.multiagent-orchestration.py  README.md  main.py  pyproject.toml  requirements.txt
docs/: Skills-Compare.md  Web_Data_Retriever.md  Web_Searcher.md  deep-agent-implementation-plan.md  deep-agent-walkthrough.md  git-best-practices.md  langgraph-send-pattern.md
utils/: config.py  console.py  llm.py  prompts.py  state.py  subagents.py
utils/tools/: filesystem.py  get_web_data.py  get_web_links.py  git_tools.py  memory.py  planning.py  web_retriever.py  web_searcher.py  websearchtools.py
